--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
-requests
-torch
-PIL
-open_clip
-tqdm
-numpy
-datasets
-matplotlib
+datasets==4.1.1
+matplotlib==3.10.6
+numpy==2.3.3
+open_clip==2.23.0
+Pillow==11.3.0
+requests==2.32.5
+torch==2.8.0
+tqdm==4.67.1
